--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "paper": "^0.12.3",
     "sirv-cli": "^0.4.4",
     "svelte-routing": "^1.4.0"
   },
