--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "paper": "^0.12.3",
+    "raphael": "^2.3.0",
     "sirv-cli": "^0.4.4",
     "svelte-routing": "^1.4.0"
   },
